깃이그노어 수정

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,49 @@
 **/*.rvi
 **/.#*
 **/CVS/**
+CUSTOMER1106/mapping/DeletedMap_RMF4B7B4DF-4627-5C3C-EB74-E24EF2A429E2.xml
+CUSTOMER1106/mapping/ExtendedMap_RMF4B7B4DF-4627-5C3C-EB74-E24EF2A429E2.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/foreignkey/seg_0/0FF58CF3-918F-1956-E55A-A2274574ECD2.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/foreignkey/seg_0/1C3206BC-8F90-25F5-9708-D7759DF471DE.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/foreignkey/seg_0/3F2610EA-F11B-ECDB-4B7E-768898F38C97.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/foreignkey/seg_0/4919F7D6-B41F-36F2-D0EB-2D0532B6A941.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/foreignkey/seg_0/6575847F-6EA2-1FFE-A583-D9EBBFDF3B0A.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/foreignkey/seg_0/65DED906-5CD7-7609-860E-F618550EC2CB.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/foreignkey/seg_0/CECD1F96-DC26-C2F8-883A-982552F3C76B.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/foreignkey/seg_0/D9230067-3367-914C-6F15-4283ABAD96D5.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/foreignkey/seg_0/F81E7C71-9BDD-992E-71A8-248D49B5CB4F.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/foreignkey/seg_0/EED2EAA2-9906-A028-AB24-CFB22573B4A9.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/01F6E6D1-3988D1813575.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/Segment/seg_0/700FDB98-8D07-A037-7535-82601DEEAE78.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/Segment/seg_0/D1C10F81-581B-628D-988B-78C79F129924.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/Segment/seg_0/AB8E05F9-5711-A458-D36B-25F06D334C24.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/Segment/seg_0/F6B93982-6FB3-57F4-384C-078475DE1FE9.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/SType/seg_0/47E390DE-0671-C4B1-8428-0F45CBEE18F8.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/SType/seg_0/F72C39E0-D1CA-8821-2AD7-A1E95A37D3D1.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/Table/seg_0/17125A93-96A1-1622-7C74-C61EEAB93CFE.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/Table/seg_0/9B117FA8-5404-3B56-DA2D-CB8607B716BB.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/Table/seg_0/D7766D8C-AC98-743D-90A0-1A7AA62B0ABE.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/Table/seg_0/59243711-7AA2-DC93-1CBD-6032A65D9F67.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/Table/seg_0/47EECDD9-49C3-886F-4C0A-6FE115698E50.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/Table/seg_0/3F94D892-54D1-1733-D3C1-CD52B49EC4C8.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/Table/seg_0/538BE971-1DEF-D898-0711-41EAA9831CBE.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/TSpace/seg_0/219039C0-94B7-F000-29EF-8DD8E00AA880.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/User/seg_0/2DD3CA39-D7E8-78C0-9732-0775CE9F42D0.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/User/seg_0/PUBLIC.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/User/seg_0/MDSYS.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/Trigger/seg_0/8DC3677D-A4FA-8D9E-A449-5C0AF851F7EE.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/schema/seg_0/6FB02921-9C6C-9C00-5C1B-216756F33C23.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/table/seg_0/17125A93-96A1-1622-7C74-C61EEAB93CFE.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/table/seg_0/225C98B3-25A7-0DC1-EDB2-AEA690C831C8.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/table/seg_0/3F94D892-54D1-1733-D3C1-CD52B49EC4C8.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/table/seg_0/47EECDD9-49C3-886F-4C0A-6FE115698E50.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/table/seg_0/538BE971-1DEF-D898-0711-41EAA9831CBE.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/subviews/2E430779-91D4-384B-AE31-BE20272B0FD0.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/table/seg_0/5C61BE2D-B026-5E51-726C-1BC5B2A639F2.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/Table/seg_0/225C98B3-25A7-0DC1-EDB2-AEA690C831C8.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/Table/seg_0/5C61BE2D-B026-5E51-726C-1BC5B2A639F2.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/Trigger/seg_0/4EB142A0-0729-2F63-7E25-4E574AA34D33.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/table/seg_0/59243711-7AA2-DC93-1CBD-6032A65D9F67.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/table/seg_0/9B117FA8-5404-3B56-DA2D-CB8607B716BB.xml
+CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/table/seg_0/D7766D8C-AC98-743D-90A0-1A7AA62B0ABE.xml
