깃이그노어 png 제외

--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/phys/01F6E6D1-3988D1813575/Trigger/seg_0/
 CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/table/seg_0/59243711-7AA2-DC93-1CBD-6032A65D9F67.xml
 CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/table/seg_0/9B117FA8-5404-3B56-DA2D-CB8607B716BB.xml
 CUSTOMER1106/rel/F4B7B4DF-E24EF2A429E2/table/seg_0/D7766D8C-AC98-743D-90A0-1A7AA62B0ABE.xml
+*.png
